# SimpleCERItemRamdomizer

./: CMakeLists.txt  dllmain.cpp  readme.txt
core/: config.cpp  er.cpp  hooks.cpp  items.cpp  randomizer.cpp  test.cpp
include/: config.h  er.h  hooks.h  items.h  logger.h  mem.h  misc.h  randomizer.h
tools/: logger.cpp  misc.cpp
